--- a/environment.properties
+++ b/environment.properties
@@ -1,5 +1,5 @@
-environment.aqa-shop.url=http://localhost:8080
-environment.jdbc.username=app
-environment.jdbc.password=pass
-environment.mysql.url=jdbc:mysql://127.0.0.1:3306/app
-environment.postgresql.url=jdbc:postgresql://127.0.0.1:5432/app
+aqa-shop.url=http://localhost:8080
+jdbc.username=app
+jdbc.password=pass
+mysql.url=jdbc:mysql://127.0.0.1:3306/app
+postgresql.url=jdbc:postgresql://127.0.0.1:5432/app
