--- a/data.properties
+++ b/data.properties
@@ -1,1 +1,3 @@
 indexPage.blankField=Поле обязательно для заполнения
+indexPage.wrongFormat=Неверный формат
+indexPage.wrongDate=Неверно указан срок действия карты
