--- a/environment.properties
+++ b/environment.properties
@@ -1,4 +1,8 @@
 aqa-shop.url=http://localhost:8080
+aqa-shop.base-url=http://localhost
+aqa-shop.app-port=8080
+aqa-shop.apiPayUrl=api/v1/pay
+aqa-shop.apiCreditUrl=api/v1/credit
 jdbc.username=app
 jdbc.password=pass
 mysql.url=jdbc:mysql://127.0.0.1:3306/app
