--- a/appveyorMysql.yml
+++ b/appveyorMysql.yml
@@ -7,6 +7,9 @@ branches:
 build: off  # будем использовать свой скрипт сборки
 
 install:
+  - curl -L "https://github.com/docker/compose/releases/download/1.25.4/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+  - chmod +x /usr/local/bin/docker-compose
+  - docker-compose --version
   - sh startMysqlEnv.sh
   - chmod +x ./gradlew
 
