--- a/appveyorMysql.yml
+++ b/appveyorMysql.yml
@@ -8,6 +8,7 @@ build: off  # будем использовать свой скрипт сбор
 
 install:
   - sudo curl -L "https://github.com/docker/compose/releases/download/1.25.4/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+  - ls -la /usr/local/bin/
   - docker-compose --version
   - sh startMysqlEnv.sh
   - chmod +x ./gradlew
