--- a/appveyorMysql.yml
+++ b/appveyorMysql.yml
@@ -9,7 +9,7 @@ build: off  # будем использовать свой скрипт сбор
 install:
   - sudo curl -L "https://github.com/docker/compose/releases/download/1.25.4/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
   - whoami
-  - chmod +x /usr/local/bin/docker-compose
+  - sudo chmod +x /usr/local/bin/docker-compose
   - docker-compose --version
   - sh startMysqlEnv.sh
   - chmod +x ./gradlew
